temporary fix to text overlap in dashboard page when resizing

--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,7 @@ body{
     flex-direction: row;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    white-space: nowrap;
 }
 
 .stats div {
